--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand" href="#">Bike Dekho</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -152,15 +152,15 @@
       </div>
     </div>
     <div class="container py-5">
-      <div class="row text-center">
+      <div class="row text-center g-5">
         <div class="col-lg-4 col-sm-12">
           <img class="w-75" src="./images/feature-bike.jpg" alt="">
         </div>
         <div class="col-lg-4 col-sm-12">
-          <img class="w-75" src="./images/feature-bike.jpg" alt="">
+          <img class="w-75" src="./images/bike-5.png" alt="">
         </div>
         <div class="col-lg-4 col-sm-12">
-          <img class="w-75" src="./images/feature-bike.jpg" alt="">
+          <img class="w-75" src="./images/bike-6.png" alt="">
         </div>
       </div>
     </div>
@@ -169,7 +169,7 @@
   <!-- Latest news section -->
   <section class="latest-news-section py-5">
     <div class="container">
-      <div class="row">
+      <div class="row g-4">
         <h2 class="latest-news-intro text-center fw-bold display-4">Latest News</h2>
         <div class="col-lg-4">
           <div class="card p-3">
@@ -222,7 +222,7 @@
     <div class="container">
       <h2 class="happy-client-intro fw-bold display-4 text-center">Happy <span class="cmn-clr-one">Clients Says</span>
       </h2>
-      <div class="row">
+      <div class="row g-4">
         <div class="col-lg-4">
           <div class="card">
             <div class="card-img text-center py-5"><img class="w-50" src="./images/user-1.png" alt=""></div>
@@ -286,7 +286,7 @@
       <div class="row py-5">
         <div class="col-lg-6">
           <div class="faq-inner-left text-center">
-            <img src="./images/faq.png" alt="">
+            <img class="w-75" src="./images/faq.png" alt="">
           </div>
         </div>
         <div class="col-lg-6">
